--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: Mac os 
+    runs-on: Ubuntu - Latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
